# the4lessons-orchestrator-template

./: .gitattributes  .gitignore  README.MD  README_TEMPLATE.md  git push -u origin main  git push -u origin main.pub  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md
.github/workflows/: auto-update-precommit.yml  bootstrap-dev-hygiene.yml  ci.yml  dependabot.yml  format.yml  release.yml  tests.yml
tests/: test_version.py
the4lessons_orchestrator/: __init__.py
