[project]
name = "the4lessons-orchestrator"
version = "0.1.0"
description = "A self-maintaining automation pipeline for The 4 Lessons ecosystem"
authors = [
    { name = "Lyndon Greene", email = "lgreene2@users.noreply.github.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "black>=24.3.0",
    "ruff>=0.4.0",
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
extend-exclude = '''
(
    venv
    | build
    | dist
    | migrations
)
'''

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
select = ["E", "F", "W"]
ignore = ["E501"]